    branch (LP: #632770)
  * data/ui/SoftwareCenter.ui:
    - add translator_credits (LP: #632770), thanks to 
      Adnane Belmadiaf 
  * merged lp:~aaronp/software-center/fix-699898, many thanks
    to Aaron Peachey (LP: #699898)

  [ Kiwinote ]
  * softwarecenter/app.py:
    - don't crash on pressing backspace in the history pane (LP: #696639)
  * softwarecenter/db/application.py:
    - display correct version number for installed packages (LP: #695026)

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/backend/aptd.py,
    softwarecenter/models/appstore.py,
    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/appdetailsview_webkit.py,
    softwarecenter/view/appview.py:
    - restore progress bar feedback when installing/removing software
      from within the applist view (LP: #701589)
    - clean up unused code
  * softwarecenter/backend/aptd.py:
    - attach the aptdaemon progress-changed listener earlier in the
      transaction to allow for more instant progress feedback in the UI

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 13 Jan 2011 12:34:02 -0600

software-center (3.1.9) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/purchaseview.py:
    - restore terms of service popup window
  * softwarecenter/app.py,
    softwarecenter/enums.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/basepane.py,
    softwarecenter/view/softwarepane.py,
    softwarecenter/view/viewswitcher.py:
    softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py:
    - re-implement reinstall previous purchases view as a subview
      of the top-level Get Software view (LP: #628404) 
    - use init_view to defer loading of the channel and installed
      pane views, provides further startup time improvement

  [ Michael Vogt ]
  * merged lp:~aaronp/software-center/usc-605048:
    Alters db update behaviour to stop 'rebuilding' window appearing while